...
                    loadingPicturePicker = true
                }){
                    Image(systemName: ("square.and.arrow.up"))
                        .resizable()
                        .frame(width: maxWidth*0.18, height:maxWidth*0.22)
                    
                    Text("Choose a picture")
                        .font(Font.system(size: 20, weight: .semibold))
                }
                .buttonStyle(Styles.PinkTextButton())
            } else {
                Button(action: {
                    pickerShowing = true
...
                        Text("Tap image to change")
                            .font(Font.system(size: 20, weight: .semibold))
                            .foregroundColor(Styles().themePink)
                    }
                }
                NavigationLink(destination: BasicInfo(viewModel: viewModel, tabSelection: tabSelection, presentationMode: presentationMode, prevPresentationMode: presentationMode), isActive: $presentInfoScreen) {
                    Text("Next")
                        .frame(maxWidth: .infinity, alignment: .center)
                        .onTapGesture {
                            self.presentInfoScreen = true
                        }
                }
                .buttonStyle(Styles.PinkButton())
...
    var presentationMode: Binding<PresentationMode>
    var prevPresentationMode: Binding<PresentationMode>
    
    var body: some View {
        VStack(alignment: .leading) {
            CustomInput(
                for: "Item Name*",
                imageName: "tshirt",
                autocapitalization: .sentences,
                input: $viewModel.item.title
            ) {}
            
            HStack {
                CustomInput(
                    for: "Price*",
                    imageName: "dollarsign.circle",
                    autocapitalization: .never,
                    input: $viewModel.chosenPrice
                ) {}
                
                CustomInput(
                    for: "Size*",
                    imageName: "ruler",
                    autocapitalization: .never,
                    input: $viewModel.item.size
                ) {}
            }

            VStack (alignment: .leading, spacing: 0){
                Menu {
                    Button {
                        viewModel.item.condition = "New"
                        // do something
                    } label: {
                        Text("New")
                    }
                    Button {
                        viewModel.item.condition = "Lightly Used"
...
                            Image(systemName: "clock")
                                .foregroundColor(.black)
                                .padding(EdgeInsets(top: 0, leading: 20, bottom: 0, trailing: 0))
                            Divider()
                                .frame(height: 25)
                            viewModel.item.condition == "" ?
                                Text("Condition*")
                                    .foregroundColor(.gray)
                                    .font(.system(size: 20))
                                :
                                Text("\(viewModel.item.condition)")
                                    .foregroundColor(.black)
                                    .font(.system(size: 20))
...
                        }
                    }
                }.padding(.bottom)
            }

            CustomInput(
                for: "Description",
                imageName: "pencil",
                autocapitalization: .sentences,
                input: $viewModel.item.description
            ) {}
            
            if viewModel.isEditing {
...
                        viewModel.updateItem { self.presentationMode.wrappedValue.dismiss() }
                    }
                    else {
                        isMissingRequiredInfo = true
                    }
                }) {
                    Text("Done")
                        .frame(maxWidth: .infinity, alignment: .center)
                }
                .buttonStyle(Styles.PinkButton())
                
                Button(action: {
                    showDeleteConfirmation = true
                }) {
                    Text("Delete Item")
                        .frame(maxWidth: .infinity, alignment: .center)
                }
                .buttonStyle(Styles.PinkButton())
            }
            else {
                NavigationLink(destination: OptionalInfo(tabSelection: $tabSelection, prevPresentationMode: prevPresentationMode)) {
...
                    isMissingRequiredInfo = true
                }
                .buttonStyle(Styles.PinkButton())
            }
            
            if isMissingRequiredInfo {
                Text("Please enter valid information for all required fields.")
                    .frame(maxWidth: .infinity, alignment: .center)
                    .multilineTextAlignment(.center)
                    .padding(EdgeInsets(top: 10, leading: 5, bottom: 20, trailing: 5))
                    .font(Font.system(size: 16, weight: .semibold))
                    .foregroundColor(Styles().themePink)
            }
...
        .toolbar {
            ToolbarItem(placement: .navigationBarLeading) {
                Styles.BackButton(presentationMode: self.presentationMode)
            }
        }
        .alert(isPresented: $showDeleteConfirmation) {
            Alert(title: Text("Confirm Deletion"),
                  message: Text("Are you sure you want to remove this item? This action cannot be undone"),
                  primaryButton: .destructive(Text("Delete"), action: {
                    viewModel.deleteItem()
                    self.prevPresentationMode.wrappedValue.dismiss()
                  }),
                  secondaryButton: .cancel())
        }
    }
...
                    itemVM.fetchSeller(for: itemId, curUser: session.currentUser) {
                        self.prevPresentationMode.wrappedValue.dismiss()
                    }
                }
                tabSelection.wrappedValue = 2
            }) {
                Text("Post Item!")
                    .frame(maxWidth: .infinity, alignment: .center)
            }
            .buttonStyle(Styles.PinkButton())
            
            Spacer()
        }
...
