...
        HStack {
            Text(viewModel.user.name)
                .font(.system(size: 20, weight: .semibold))
                .frame(maxWidth: .infinity)
                .opacity(getNameOpacity(proxy: proxy))
            VStack(alignment: .center) {
                Image("logo")
                    .resizable()
                    .aspectRatio(contentMode: .fit)
                    .frame(width: proxy.size.width * 0.3)
            }
            .opacity(getOpacity(proxy: proxy))
            .frame(maxWidth: .infinity)
...
                Text("|")
                Image(systemName: "dollarsign.circle")
                    .foregroundColor(Styles().themePink)
                Text(viewModel.user.venmo)
            }
            Picker("userType", selection: $viewModel.viewingMode) {
                Text("Buyer").tag(ViewingMode.buyer)
                Text("Seller").tag(ViewingMode.seller)
            }
            .onReceive(viewModel.$viewingMode, perform: { _ in
                viewModel.position = Position.first
                if session.isLoggedIn {
                    viewModel.getProfileData()
                }
...
