...
                ProfileView(tabSelection: $selection)
                    .tabItem {
                        if (selection == 2) {
                            Image(systemName: "person.fill")
                        }
                        else {
                            Image(systemName: "person")
                                .environment(\.symbolVariants, .none)
                        }
                    }
                    .tag(2)
            }
            .accentColor(.black)
...
