...
                        .background(Styles().themePink)
                        .cornerRadius(10)
                        .foregroundColor(.white)
                    }
                    else {
                        // is the seller
                        Text("Edit Item")
                            .frame(maxWidth: maxWidth*0.3, alignment: .center)
                            .onTapGesture {
                                if (isLoaded) {
                                    self.presentEditScreen = true
                                    isLoaded = false
                                }
...
